# udemy_cpp_design_pattern_study

./: README.md
Section10_Decorator/: CMakeLists.txt
Section10_Decorator/src/: DynamicDecorator.cpp  FunctionalDecorator.cpp  excercise.cpp
Section12_Flyweight/: CMakeLists.txt
Section12_Flyweight/src/: HandMadeFlyweight.cpp  TextFormatting.cpp  excercise.cpp
Section13_Proxy/: CMakeLists.txt
Section13_Proxy/src/: PropertyProxy.cpp  SmartPointer.cpp  VirtualProxy.cpp  excercise.cpp
Section14_ChainOfResponsibility/: CMakeLists.txt
Section14_ChainOfResponsibility/src/: PointerChain.cpp  excercise.cpp
Section15_Command/: CMakeLists.txt
Section15_Command/src/: Command.cpp  Macro.cpp  UndoOperations.cpp  excercise.cpp
Section16_Interpreter/: CMakeLists.txt
Section16_Interpreter/src/: Lexing.cpp  Parsing.cpp  excercise.cpp
Section17_Iterator/: CMakeLists.txt
Section17_Iterator/src/: BinaryTreeIterator.cpp  IteratorSTL.cpp  excercise.cpp
Section18_Mediator/: CMakeLists.txt
Section18_Mediator/include/: ChatRoom.cpp  ChatRoom.h  Person.cpp  Person.h
Section18_Mediator/src/: excercise.cpp  main_chat_room.cpp
Section19_Memento/: CMakeLists.txt
Section19_Memento/src/: Memento.cpp  Undo_redo.cpp  excercise.cpp
Section20_Observer/: CMakeLists.txt
Section20_Observer/include/: Observable.hpp  Observer.hpp  SaferObservable.hpp
Section20_Observer/src/: excercise.cpp  observer_practice.cpp  observer_practice_with_boost_signal.cpp  problem_dependency.cpp  thread_safety.cpp
Section21_State/: CMakeLists.txt
Section21_State/src/: DynamicState.cpp  StateMachine.cpp  excercise.cpp
Section22_Strategy/: CMakeLists.txt
Section22_Strategy/src/: StaticStrategy.cpp  excercise.cpp
Section23_Template_Method/: CMakeLists.txt
Section23_Template_Method/src/: TemplateMethod.cpp  (+1 more)
Section24_Visitor/: CMakeLists.txt
Section24_Visitor/src/: AcyclicVisitor.cpp  ClassicVisitor.cpp  IntrusiveVisitor.cpp  MultiMethods.cpp  ReflectiveVisitor.cpp  excercise.cpp
Section2_Solid_Design_Principles/: CMakeLists.txt
Section2_Solid_Design_Principles/src/: DependencyInversionPrinciple.cpp  InterfaceSegregationPrinciple.cpp  LiskovSubstitutionPrinciple.cpp  OpenClosedPrinciple.cpp  SingleResponsibilityPrinciple.cpp
Section3_Builder/: CMakeLists.txt
Section3_Builder/include/: Person.cpp  Person.h  PersonAddressBuilder.h  PersonBuilder.cpp  PersonBuilder.h  PersonJobBuilder.h
Section3_Builder/src/: Builder.cpp  BuilderFacets.cpp  FluentBuilder.cpp  GroovyStyleBuilder.cpp  LifeWithoutBuilder.cpp  excercise.cpp
Section4_Factories/: CMakeLists.txt
Section5_Prototype/: CMakeLists.txt
Section5_Prototype/src/: Prototype.cpp  PrototypeFactory.cpp  PrototypeSerialization.cpp  RecordKeeper.cpp  excercise.cpp
Section6_Singleton/: CMakeLists.txt
Section6_Singleton/files/: capitals.txt
Section6_Singleton/src/: Multitone.cpp  SingletonDepInj.cpp  SingletonLifetime.cpp  SingletoneImpl.cpp  TestabilityIssues.cpp
Section7_Adapter/: CMakeLists.txt
Section8_Bridge/: CMakeLists.txt
Section9_Composite/: CMakeLists.txt
(+23 files in other folders)
